ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: observation
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
      - path: /observe
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80



###### No database URI since its non http service and therefore not supported by ingress
